[package]
name = "web-app"
version = "0.1.0"
authors = ["zulfikra <zulfikralahmudin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.8"
actix-web = "1.0.0-beta"
diesel = { version = "1.0.0", features = ["postgres"] }
postgres = "0.15.2"
dotenv = "0.9.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
